--- a/style.css
+++ b/style.css
@@ -65,10 +65,8 @@ p {
   transform-origin: center center;
 }
 
-/* Front side of the flip card */
-.flip-card-front {
-  background-color: #346b22;
-  color: white;
+.flip-card-front,
+.flip-card-back {
   border-radius: 10px;
   padding: 20px;
   text-align: center;
@@ -76,26 +74,27 @@ p {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
-  transform: rotateY(0deg);
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+}
+
+
+/* Front side of the flip card */
+.flip-card-front {
+  background-color: #346b22;
+  color: white;
+  z-index: 2;
 }
 
 /* Back side of the flip card */
 .flip-card-back {
   background-color: #FFF8DC;
-  border-radius: 10px;
-  padding: 30px;
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
   transform: rotateY(180deg);
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+  z-index: 1
 }
 
 /* Style for the flip button */
-#flipButton {
+#flipButtonfront,
+#flipButtonback {
   padding: 10px 20px;
   font-size: 16px;
   border: none;
@@ -112,12 +111,4 @@ p {
 /* Flip effect on the card */
 .flip-card-inner.flipped {
   transform: rotateY(180deg);
-}
-
-.flip-card-container{
-  display: block;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 20px
 }
